--- a/2048-game/View/GameWindow.xaml
+++ b/2048-game/View/GameWindow.xaml
@@ -23,11 +23,16 @@
     <Window.Resources>
         <Style x:Key="TextBlockRectangleClassicStyle">
             <Setter Property="TextBlock.FontSize" Value="30"/>
+            <!-- FontSize - размер текста! -->
             <Setter Property="TextBlock.Padding" Value="0,33,0,0"/>
             <Setter Property="TextBlock.Margin" Value="2,2,2,2"/>
             <Setter Property="TextBlock.Background" Value="AntiqueWhite"/>
+            <!-- Можно удалить AntiqueWhite и вместо него выбрать любой из списка-->
+            <!-- Background - задний фон! -->
             <Setter Property="TextBlock.Foreground" Value="#FF5D5D5D"/>
+            <!-- Foreground - цвет текста! -->
             <Setter Property="TextBlock.FontFamily" Value="Code Pro Bold"/>
+            <!-- FontFamily - шрифт текста! -->
         </Style>
     </Window.Resources>
     
@@ -49,7 +54,7 @@
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
 
-        <Button Content="Начать заново" Padding="10" Margin="-3, 20, 6, 20" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button Content="Начать заново" Command="{Binding StartOverCommand}" Padding="10" Margin="-3, 20, 6, 20" Grid.Column="1" Grid.ColumnSpan="2"/>
         <StackPanel Grid.Column="3">
             <TextBlock Text="СЧЁТ" Margin="10, 20, 10, 0" TextAlignment="Center" FontSize="14"/>
             <TextBlock Text="{Binding Path=Score, UpdateSourceTrigger=PropertyChanged}" Margin="10, 0, 10, 10" TextAlignment="Center" FontSize="14"/>
